--- a/index.html
+++ b/index.html
@@ -332,8 +332,7 @@
 
         <div class="img-grid">
 
-            <div class="img-box"
-                style="background-image: url('char.png');">
+            <div class="img-box" style="background-image: url('char.png');">
                 <div class="img-gradient"></div>
                 <span class="img-title">Personagem</span>
             </div>
@@ -343,14 +342,12 @@
                 <span class="img-title">Inimigo</span>
             </div>
 
-            <div class="img-box"
-                style="background-image: url('background.png');">
+            <div class="img-box" style="background-image: url('background.png');">
                 <div class="img-gradient"></div>
                 <span class="img-title">background</span>
             </div>
 
-            <div class="img-box"
-                style="background-image: url('tilemap.png');">
+            <div class="img-box" style="background-image: url('tilemap.png');">
                 <div class="img-gradient"></div>
                 <span class="img-title">Tilemap</span>
             </div>
@@ -388,6 +385,12 @@
             if (e.target === viewer) {
                 viewer.style.display = "none";
             }
+        });
+
+
+        //Inserir link
+        document.querySelector("button").addEventListener("click", () => {
+            window.open("https://google.com.br", "_blank");
         });
     </script>
 
