--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 
         //Inserir link
         document.querySelector("button").addEventListener("click", () => {
-            window.open("https://google.com.br", "_blank");
+            window.open("https://gd.games/instant-builds/dde8e65a-caf2-490f-8c1a-6cb25854eb87", "_blank");
         });
     </script>
 
