--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
     </div>
 
     <footer>
-        <p>Projeto desenvolvido por Enzo</p>
+        <p>Projeto desenvolvido por Enzo Gabriel Amaral Rodrigues</p>
         <p>Produzido no Curso Natal IA - SuperGeeks Sertãozinho</p>
         <p>Todos os direitos reservados.</p>
     </footer>
